force-app/main/default/objects/Credit_Limit_Application__c/fields/Weights_of_Independent_Third_PE__c.field-meta.xml
<CustomField>
    <fullName>Weights_of_Independent_Third_PE__c</fullName>
    <label>Weights of Independent Third PE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>