force-app/main/default/objects/Credit_Limit_Application__c/fields/Weights_of_Net_Assets__c.field-meta.xml
<CustomField>
    <fullName>Weights_of_Net_Assets__c</fullName>
    <label>Weights of Net Assets</label>
    <length>255</length>
    <type>Text</type>
</CustomField>