force-app/main/default/objects/Credit_Limit_Application__c/fields/Weights_of_Net_Income_Margin_of_SR__c.field-meta.xml
<CustomField>
    <fullName>Weights_of_Net_Income_Margin_of_SR__c</fullName>
    <label>Weights of Net Income Margin of SR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>