force-app/main/default/objects/Credit_Limit_Application__c/fields/Weights_of_Year_of_Establishment__c.field-meta.xml
<CustomField>
    <fullName>Weights_of_Year_of_Establishment__c</fullName>
    <label>Weights of Year of Establishment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>