force-app/main/default/objects/Credit_Limit_Application__c/recordTypes/LC.recordType-meta.xml
<RecordType>
    <fullName>LC</fullName>
    <active>true</active>
    <label>LC</label>
</RecordType>