force-app/main/default/objects/Credit_Limit_Application__c/recordTypes/LC_Rejected.recordType-meta.xml
<RecordType>
    <fullName>LC_Rejected</fullName>
    <active>true</active>
    <label>LC Rejected</label>
</RecordType>