force-app/main/default/objects/Credit_Limit_Application__c/recordTypes/NonLC.recordType-meta.xml
<RecordType>
    <fullName>NonLC</fullName>
    <active>true</active>
    <label>NonLC</label>
</RecordType>