force-app/main/default/objects/Credit_Limit_Application__c/recordTypes/NonLC_China_Sinosure_insurance.recordType-meta.xml
<RecordType>
    <fullName>NonLC_China_Sinosure_insurance</fullName>
    <active>true</active>
    <label>NonLC(China Sinosure insurance)</label>
</RecordType>