force-app/main/default/objects/Credit_Limit_Application__c/recordTypes/NonLC_Rejected.recordType-meta.xml
<RecordType>
    <fullName>NonLC_Rejected</fullName>
    <active>true</active>
    <label>NonLC Rejected</label>
</RecordType>