force-app/main/default/objects/Credit_Limit_Application__c/recordTypes/SF.recordType-meta.xml
<RecordType>
    <fullName>SF</fullName>
    <active>true</active>
    <label>South Africa Local Insurance Credit Limit Application</label>
</RecordType>