force-app/main/default/objects/Credit_Limit_Application__c/validationRules/Confirmed_Bank_Country_Code_Not_Empty.validationRule-meta.xml
<ValidationRule>
    <fullName>Confirmed_Bank_Country_Code_Not_Empty</fullName>
    <active>true</active>
    <description>Because Credit Insurance Confirmation is Selected , Confirmation Bank Country Code cannot be empty!</description>
    <errorConditionFormula>IF( AND(RecordType.DeveloperName =&apos;LC&apos;, Credit_Insurance_Confirmation_Y_N__c =True,ISBLANK(  Confirmed_Bank_Country_Code__c  )), TRUE, FALSE)</errorConditionFormula>
    <errorDisplayField>Confirmed_Bank_Country_Code__c</errorDisplayField>
    <errorMessage>There is the Credit Insurance Confirmation,Confirmed Bank Country Code Cannot be Empty!</errorMessage>
</ValidationRule>