force-app/main/default/objects/Credit_Limit_Application__c/validationRules/Credit_Bank_SWIFT_Cannot_be_Null.validationRule-meta.xml
<ValidationRule>
    <fullName>Credit_Bank_SWIFT_Cannot_be_Null</fullName>
    <active>true</active>
    <description>If have Credit Insurance Confirmation, Bank SWIFT cannot be null.</description>
    <errorConditionFormula>IF( AND(RecordType.DeveloperName =&apos;LC&apos;,Credit_Insurance_Confirmation_Y_N__c =True,ISNULL( Credit_Insurance_Confirmation_Bank_SWIFT__c )), TRUE, FALSE)</errorConditionFormula>
    <errorDisplayField>Credit_Insurance_Confirmation_Bank_SWIFT__c</errorDisplayField>
    <errorMessage>There is the Credit Insurance Confirmation,Credit Insurance Confirmation Bank SWIFT cannot be Empty !</errorMessage>
</ValidationRule>