force-app/main/default/objects/Credit_Limit_Application__c/validationRules/CreditInsuranceConf_Cannot_be_Empty.validationRule-meta.xml
<ValidationRule>
    <fullName>CreditInsuranceConf_Cannot_be_Empty</fullName>
    <active>true</active>
    <errorConditionFormula>IF( AND(RecordType.DeveloperName =&apos;LC&apos;,Credit_Insurance_Confirmation_Y_N__c =True,ISBLANK( Credit_Insurance_Confirmation_Bank_SWIFT__c )), TRUE, FALSE)</errorConditionFormula>
    <errorDisplayField>Credit_Insurance_Confirmation_Bank_SWIFT__c</errorDisplayField>
    <errorMessage>There is the Credit Insurance Confirmation,Credit Insurance Confirmation Bank SWIFT Cannot be Empty !</errorMessage>
</ValidationRule>