force-app/main/default/objects/Credit_Limit_Application__c/validationRules/Earliest_Transaction_Cannot_be_Null.validationRule-meta.xml
<ValidationRule>
    <fullName>Earliest_Transaction_Cannot_be_Null</fullName>
    <active>true</active>
    <errorConditionFormula>IF( AND( RecordType.DeveloperName=&apos;NonLC&apos;,
Historical_Transaction_Y_N__c=True,ISPICKVAL(Earliest_Transaction_Year__c, &apos;&apos;)), TRUE, FALSE)</errorConditionFormula>
    <errorDisplayField>Earliest_Transaction_Year__c</errorDisplayField>
    <errorMessage>Earliest Transaction Year Should be Empty! (Because there is no Historical Transaction)</errorMessage>
</ValidationRule>