force-app/main/default/objects/Credit_Limit_Application__c/validationRules/Earliest_Transaction_should_be_null.validationRule-meta.xml
<ValidationRule>
    <fullName>Earliest_Transaction_should_be_null</fullName>
    <active>true</active>
    <description>Earliest Transaction should be null</description>
    <errorConditionFormula>IF(AND(RecordType.DeveloperName =&apos;NonLC&apos;, Historical_Transaction_Y_N__c=FALSE,     
NOT( ISBLANK(TEXT(Earliest_Transaction_Year__c)) ) ) , 
TRUE, FALSE)</errorConditionFormula>
    <errorDisplayField>Earliest_Transaction_Year__c</errorDisplayField>
    <errorMessage>Earliest Transaction Year Should be Empty!(Because there is No Historical Transaction)</errorMessage>
</ValidationRule>