force-app/main/default/objects/Credit_Limit_Application__c/validationRules/Earliest_year_release_should_be_null.validationRule-meta.xml
<ValidationRule>
    <fullName>Earliest_year_release_should_be_null</fullName>
    <active>true</active>
    <description>Earliest Year of Release (year) should be null</description>
    <errorConditionFormula>IF(AND(RecordType.DeveloperName =&apos;NonLC&apos;, Historical_Transaction_Y_N__c=FALSE,     
NOT( ISBLANK(TEXT( Earliest_Year_of_Release_year__c )) ) ) , 
TRUE, FALSE)</errorConditionFormula>
    <errorDisplayField>Earliest_Year_of_Release_year__c</errorDisplayField>
    <errorMessage>Earliest Year of Release Should be Empty!(Because there is No Historical Transaction)</errorMessage>
</ValidationRule>