force-app/main/default/objects/Credit_Limit_Application__c/validationRules/editer_must_creator.validationRule-meta.xml
<ValidationRule>
    <fullName>editer_must_creator</fullName>
    <active>false</active>
    <errorConditionFormula>$User.Id  &lt;&gt;  CreatedById</errorConditionFormula>
    <errorMessage>Can not save! You are not this credit limit application owner.</errorMessage>
</ValidationRule>