force-app/main/default/objects/Credit_Limit_Application__c/validationRules/English_Address_Cannot_be_NULL.validationRule-meta.xml
<ValidationRule>
    <fullName>English_Address_Cannot_be_NULL</fullName>
    <active>true</active>
    <description>Confirmation English Address Cannot be empty !</description>
    <errorConditionFormula>IF( AND(  RecordType.DeveloperName =&apos;LC&apos;, Credit_Insurance_Confirmation_Y_N__c =True, ISBLANK(  Confirming_Bank_Address_English__c )), TRUE, FALSE)</errorConditionFormula>
    <errorDisplayField>Confirming_Bank_Address_English__c</errorDisplayField>
    <errorMessage>There is No Credit Insurance Confirmation,Confirmation English Address Cannot be Empty !</errorMessage>
</ValidationRule>