force-app/main/default/objects/Credit_Limit_Application__c/validationRules/Error_Shipping_Plan.validationRule-meta.xml
<ValidationRule>
    <fullName>Error_Shipping_Plan</fullName>
    <active>true</active>
    <errorConditionFormula>CONTAINS(Shipping__c , &apos;  &apos;) || CONTAINS(Shipping__c , &apos; &apos;)</errorConditionFormula>
    <errorDisplayField>Shipping__c</errorDisplayField>
    <errorMessage>Contains error Spaces！</errorMessage>
</ValidationRule>