force-app/main/default/objects/Credit_Limit_Application__c/validationRules/EstimatedCurrentYearSalesRevenuCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>EstimatedCurrentYearSalesRevenuCheck</fullName>
    <active>true</active>
    <description>请输入有效的整数值</description>
    <errorConditionFormula>IF( RecordType.Name   = &apos;NonLC&apos;, NOT(REGEX(TEXT(Estimated_Transaction_Amount_CY__c), &apos;^[0-9]+$&apos;)) || Estimated_Transaction_Amount_CY__c &lt;= 0, false)</errorConditionFormula>
    <errorDisplayField>Estimated_Transaction_Amount_CY__c</errorDisplayField>
    <errorMessage>Please enter a valid integer value.</errorMessage>
</ValidationRule>