force-app/main/default/objects/Credit_Limit_Application__c/validationRules/Guarantor_Country_Code_Not_Empty.validationRule-meta.xml
<ValidationRule>
    <fullName>Guarantor_Country_Code_Not_Empty</fullName>
    <active>true</active>
    <errorConditionFormula>IF( AND( RecordType.DeveloperName = &apos;NonLC&apos;,Possess_Guarantor_Y_N__c = true,ISBLANK( China_Credit_Insurance_Guarantor_Code__c ),  ISBLANK(  Guarantor_Country_Code__c ) ), TRUE, FALSE)</errorConditionFormula>
    <errorDisplayField>Guarantor_Country_Code__c</errorDisplayField>
    <errorMessage>Credit Insurance Confirmation is Selected and China Credit Insurance Guarantor Code is empty,Guarantor Country Code Cannot be Empty !</errorMessage>
</ValidationRule>