force-app/main/default/objects/Credit_Limit_Application__c/validationRules/Guarantor_English_Addres_cannot_be_Input.validationRule-meta.xml
<ValidationRule>
    <fullName>Guarantor_English_Addres_cannot_be_Input</fullName>
    <active>true</active>
    <description>Guarantor English Addres cannot be Imput!</description>
    <errorConditionFormula>IF( AND( RecordType.DeveloperName = &apos;NonLC&apos;,Possess_Guarantor_Y_N__c = false, NOT(ISBLANK( Guarantor_English_Address__c ))), TRUE, FALSE)</errorConditionFormula>
    <errorDisplayField>Guarantor_English_Address__c</errorDisplayField>
    <errorMessage>Guarantor English Addres Should be Empty! (Because there is no Possess Guarantor)</errorMessage>
</ValidationRule>