force-app/main/default/objects/Credit_Limit_Application__c/validationRules/Guarantor_English_Name_cannot_be_Input.validationRule-meta.xml
<ValidationRule>
    <fullName>Guarantor_English_Name_cannot_be_Input</fullName>
    <active>true</active>
    <description>Guarantor English Name cannot be Input!</description>
    <errorConditionFormula>IF( AND( RecordType.DeveloperName = &apos;NonLC&apos;,Possess_Guarantor_Y_N__c = false, NOT(ISBLANK(  Guarantor_English_Name__c ))), TRUE, FALSE)</errorConditionFormula>
    <errorDisplayField>Guarantor_English_Name__c</errorDisplayField>
    <errorMessage>Guarantor English Name Should Not be Empty! (Because there is no Possess Guarantor)</errorMessage>
</ValidationRule>