force-app/main/default/objects/Credit_Limit_Application__c/validationRules/Guarantor_English_Name_cannot_be_Null.validationRule-meta.xml
<ValidationRule>
    <fullName>Guarantor_English_Name_cannot_be_Null</fullName>
    <active>true</active>
    <description>Guarantor English Name cannot be null.</description>
    <errorConditionFormula>IF( AND( RecordType.DeveloperName = &apos;NonLC&apos;,Possess_Guarantor_Y_N__c = true,ISBLANK( China_Credit_Insurance_Guarantor_Code__c ),  ISBLANK(  Guarantor_English_Name__c ) ), TRUE, FALSE)</errorConditionFormula>
    <errorDisplayField>Guarantor_English_Name__c</errorDisplayField>
    <errorMessage>There is the China Credit Insurance Confirmation and China Credit Insurance Guarantor ,English Name Cannot be Empty !</errorMessage>
</ValidationRule>