force-app/main/default/objects/Credit_Limit_Application__c/validationRules/Last_3_Year_Transactio1_should_be_null.validationRule-meta.xml
<ValidationRule>
    <fullName>Last_3_Year_Transactio1_should_be_null</fullName>
    <active>true</active>
    <description>Last 3 Years&apos; Transaction Amount 1 (USD) should be null</description>
    <errorConditionFormula>IF(AND(Historical_Transaction_Y_N__c=FALSE,     
NOT( ISBLANK(Last_3_Years_Transaction_Amount_1_USD__c    ) ) ) , 
TRUE, FALSE)</errorConditionFormula>
    <errorDisplayField>Last_3_Years_Transaction_Amount_1_USD__c</errorDisplayField>
    <errorMessage>There is No Historical Transaction,Last 3 Years&apos; Transaction Amount 1 (USD) Should be Empty!</errorMessage>
</ValidationRule>