force-app/main/default/objects/Credit_Limit_Application__c/validationRules/Last_Three_Transaction2_should_be_null.validationRule-meta.xml
<ValidationRule>
    <fullName>Last_Three_Transaction2_should_be_null</fullName>
    <active>true</active>
    <description>Last Three Transaction Years 2 (year) should be null</description>
    <errorConditionFormula>IF(AND(Historical_Transaction_Y_N__c=FALSE,     
NOT( ISBLANK( TEXT(Last_Three_Transaction_Years_2_year__c )) ) ) , 
TRUE, FALSE)</errorConditionFormula>
    <errorDisplayField>Last_Three_Transaction_Years_2_year__c</errorDisplayField>
    <errorMessage>There is no Historical Transaction,Last Three Transaction Years 2 (year) Should be Empty!</errorMessage>
</ValidationRule>