force-app/main/default/objects/Credit_Limit_Application__c/validationRules/USA_State_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>USA_State_Check</fullName>
    <active>true</active>
    <description>如果买方国家是美国，必选</description>
    <errorConditionFormula>IF(Buyer_Country_Code__r.Value__c = &apos;USA&apos;,  text(USA_State__c) = null, false)</errorConditionFormula>
    <errorDisplayField>USA_State__c</errorDisplayField>
    <errorMessage>Please select State field.</errorMessage>
</ValidationRule>