force-app/main/default/objects/Credit_Limit_Application__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Customer__c</columns>
    <columns>Payment_Method__c</columns>
    <columns>Final_Availability__c</columns>
    <columns>Recommended_Billing_Period_days__c</columns>
    <columns>Approval_Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Orgnization__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>