force-app/main/default/objects/Credit_Limit_Application__c/listViews/Panama.listView-meta.xml
<ListView>
    <fullName>Panama</fullName>
    <columns>NAME</columns>
    <columns>Customer__c</columns>
    <columns>Approval_Status__c</columns>
    <columns>Orgnization__c</columns>
    <columns>Hisense_Entity_From_SAP__c</columns>
    <columns>Final_Availability__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Orgnization__c</field>
        <operation>contains</operation>
        <value>巴拿马</value>
    </filters>
    <label>Panama</label>
</ListView>